src/objects/PMF_Finca_Categoria_6_Control_malezas__c.object
<CustomObject>
    <fields>
        <fullName>Fecha__c</fullName>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Metodos_amigables_reduccion_herbicidas__c</fullName>
        <label>Métodos amigables reducción herbicidas</label>
        <picklist>
            <picklistValues>
                <fullName>Control físico/mecánico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivos de cobertura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mulch (colchón material orgánico)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distancias de siembra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manejo de Sombra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control químico/herbicidas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Nivel_categoria__c</fullName>
        <formula>IF( Puntaje_categoria__c &lt; 1, &apos;b. Bajo&apos;, &apos;a. Alto&apos;)</formula>
        <label>Nivel categoría</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_categoria__c</fullName>
        <formula>&apos;Control malezas&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre categoría</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_tipo_fecha__c</fullName>
        <formula>Nombre_categoria__c + &apos; &apos; +  TEXT(Tipo__c) + &apos; &apos; + TEXT(Fecha__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre tipo fecha</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_de_Manejo_de_Finca__c</fullName>
        <label>Plan de Manejo de Finca</label>
        <referenceTo>Farm_Management_Plan__c</referenceTo>
        <relationshipLabel>PMF Finca Categoria 6 - Control malezas</relationshipLabel>
        <relationshipName>PMF_Finca_Categorias_6_Control_malezas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Puntaje_Metodos_amigables_reduccion_herb__c</fullName>
        <formula>IF(  
 OR(
INCLUDES( Metodos_amigables_reduccion_herbicidas__c , &apos;Control físico/mecánico&apos;),
INCLUDES( Metodos_amigables_reduccion_herbicidas__c , &apos;Cultivos de cobertura&apos;),
INCLUDES( Metodos_amigables_reduccion_herbicidas__c , &apos;Mulch (colchón material orgánico)&apos;),
INCLUDES( Metodos_amigables_reduccion_herbicidas__c , &apos;Distancias de siembra&apos;),
INCLUDES( Metodos_amigables_reduccion_herbicidas__c , &apos;Manejo de Sombra&apos;)
) 
, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Métodos amigables reducción herb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_categoria__c</fullName>
        <formula>Puntaje_Metodos_amigables_reduccion_herb__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje categoría</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <picklist>
            <picklistValues>
                <fullName>Línea base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seguimiento</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PMF Finca Categoria 6 - Control malezas</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>PMF Finca Categoria 6 - Control malezas</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PMF Finca Categorias 6 - Control malezas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>